add first 7 pages

--- a/index.html
+++ b/index.html
@@ -1,15 +1,171 @@
 <html lang="th">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Mali:ital@1&family=Playfair+Display&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="page_1">
-        <div>
-        
-    </body>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="page page-1">
+        <nav class="navbar">
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#page-2">BIO</a></li>
+                    <li><a href="#page-6">CERTIFICATE</a></li>
+                    <li><a href="..">PROJECT</a></li>
+                    <li><a href="..">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container">
+            <h1>PORTFOLIO</h1>
+            <h2>Siranut Akarawuthi</h2>
+            <a href="#page-2"><button>Explore</button></a>
+        </div>
+    </div>
+    <div class="page-2" id="page-2">
+        <div class="container">
+            <div><img src="./img/pfp.jpg" alt="pfp"></div>
+            <div class="text">
+                <h2 id="aboutme">About Me</h2>
+                <h2 id="name">Siranut Akarawuthi</h2>
+                <h2>3rd-Year Student at Faculty of Information and <br>Communication Technology (ICT Mahidol)</h2>
+            </div>
+        </div>
+    </div>
+    <div class="page page-3">
+        <div class="container">
+            <h2>Hello there!</h2>
+            <p>I am constantly seeking new opportunities to learn and
+                grow. When the faculty began recruiting teacher assistants, I jumped at the chance to get involved. I
+                have always enjoyed contributing to projects and helping others learn, and being a teacher assistant has
+                given me the opportunity to do both. I have a particular interest in programming and have a hobby of
+                creating websites using various programming languages. </p>
+        </div>
+    </div>
+    <div class="page page-4">
+        <div class="container">
+            <h2>EDUCATION</h2>
+            <div class="box">
+                <div class="flex-row">
+                    <img src="./img/school-logo.png" alt="school">
+                    <div>
+                        <h3>High school Diploma</h3>
+                        <h4>2014 - 2019</h4>
+                        <h4>Bangkok Christain College</h4>
+                    </div>
+
+                </div>
+                <div class="flex-row">
+                    <img src="./img/university-logo.png" alt="university">
+                    <div>
+                        <h3>Bachelor of Science</h3>
+                        <h4>2020 - Present</h4>
+                        <h4>Faculty of ICT, Mahidol University</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="page-5">
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <h2>Experience</h2>
+                    <ul class="timeline">
+                        <li>
+                            <a class="title" target="_blank" href="https://bannkat.com/">Web Developer</a><br>
+                            <a href="https://bannkat.com/">Baan K&T Cattery · Full-time</a>
+                            <p>Jul 2022 - Present · 7 months</p>
+                            <p>- Design the database for each type of data<br>- Design the website interface for normal user and admin<br>- On page SEO and deploy web service on Cloud</p>
+                            <p>Skills: HTML · Cascading Style Sheets (CSS) · Node.js · MySQL</p>
+                        </li>
+                        <li>
+                            <a class="title" target="_blank" href="https://www.ict.mahidol.ac.th/">Teaching Assistant</a><br>
+                            <a href="https://www.ict.mahidol.ac.th/">Faculty of ICT, Mahidol University · Part-time</a>
+                            <p>Aug 2022 - Dec 2022 · 5 months</p>
+                            <p>- Assisted C programming instructor in delivering course material to students<br>- Graded assignments and provided feedback on student work</p>
+                            <p>Skills: C (Programming Language)</p>
+                        </li>
+                        <li>
+                            <p>Jun 2022 - Jul 2022 · 2 months</p>
+                            <p>- ICT&DST Prep Program 2022 Computer & Problem Solving Course
+                            <br>- Graded assignments and provided feedback on student work<br>- Help on icebreaking activity    </p>
+                            <p>Skills: Scratch</p>
+                        </li>
+                        <li>
+                            <p>Jan 2022 - Apr 2022 · 4 months</p>
+                            <p>- Assisted Java programming instructor in delivering course material to students
+                            <br>- Graded assignments and provided feedback on student work</p>
+                            <p>Skills: Java</p>
+                        </li>
+                        <li>
+                            <p>Jun 2021 - Jul 2021 · 2 months</p>
+                            <p>- Prep Program 2021 Computer & Problem Solving Course
+                            <br>- Graded assignments and provided feedback on student work</p>
+                            <p>Skills: Scratch</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="page page-6" id="page-6">
+        <div class="container">
+            <h2>CERTIFICATE</h2>
+        </div>
+    </div>
+    <div class="page-7">
+        <div class="container">
+            <div class="flex-row-item">
+                <h3>MATLAB ON RAMP</h3>
+                <h4>MathWorks - Jan 2022</h4>
+                <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=a9a4bb7c-f582-44d7-803f-7033fc7246b4&">Certificate Credentials</a>
+            </div>
+            <div class="flex-row-item">
+                <h3>Image Processing with MATLAB</h3>
+                <h4>MathWorks - Jan 2023</h4>
+                <a href="#">Certificate Credentials</a>
+            </div>
+            <div class="flex-row-item">
+                <h3>Deep Learning with MATLAB</h3>
+                <h4>MathWorks - Jan 2023</h4>
+                <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=466816bc-3a3c-4872-a0cb-1b65e43ce909&">Certificate Credentials</a>
+            </div>
+            <div class="flex-row-item">
+                <h3>Google Data Analytics Specialization</h3>
+                <h4>Coursera - Nov 2022</h4>
+                <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/DYJHZJFLRJHZ">Certificate Credentials</a>
+            </div>
+            <div class="flex-row-item">
+                <h3>Google IT Support Specialization</h3>
+                <h4>Coursera - Dec 2022</h4>
+                <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/FNQPU3F32P4F">Certificate Credentials</a>
+            </div>
+            <div class="flex-row-item">
+                <h3>Google Digital Marketing & <br>E-commerce Specialization</h3>
+                <h4>Coursera - Dec 2022</h4>
+                <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BGG94A8DMMEG">Certificate Credentials</a>  
+            </div>
+        </div>
+    </div>
+    <script>
+        const toggleButton = document.getElementsByClassName("toggle-button")[0]
+        const navbarLinks = document.getElementsByClassName("navbar-links")[0]
+        toggleButton.addEventListener('click', () => {
+            navbarLinks.classList.toggle('active')
+        })
+    </script>
+</body>
+
 </html>
