add font color page 12

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="flex-row-item">
                 <h3>Image Processing with MATLAB</h3>
                 <h4>MathWorks - Jan 2023</h4>
-                <a href="#">Certificate Credentials</a>
+                <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=fad533e5-02cc-40a6-a489-b3a9a84aa4ed&">Certificate Credentials</a>
             </div>
             <div class="flex-row-item">
                 <h3>Deep Learning with MATLAB</h3>
