add animation & fix font & certificate

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -28,24 +29,25 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
+        <div class="container" data-aos="ease-in">
             <h1>PORTFOLIO</h1>
             <h2>Siranut Akarawuthi</h2>
             <button onClick="document.getElementById('page-2').scrollIntoView();">Explore</button>
         </div>
     </div>
     <div class="page-2" id="page-2">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <div><img src="./img/pfp.jpg" alt="pfp"></div>
             <div class="text">
                 <h2 id="aboutme">About Me</h2>
                 <h2 id="name">Siranut Akarawuthi</h2>
-                <h2>3rd-Year Student at Faculty of Information and <br>Communication Technology (ICT Mahidol)<br>Date of Birth : 4 July 2002</h2>
+                <h2>3rd-Year Student at Faculty of Information and <br>Communication Technology (ICT Mahidol)<br>Date of
+                    Birth : 4 July 2002</h2>
             </div>
         </div>
     </div>
     <div class="page page-3">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <h2>Hello there!</h2>
             <p>I am constantly seeking new opportunities to learn and
                 grow. When the faculty began recruiting teacher assistants, I jumped at the chance to get involved. I
@@ -55,7 +57,7 @@
         </div>
     </div>
     <div class="page page-4">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <h2>EDUCATION</h2>
             <div class="box">
                 <div class="flex-row">
@@ -79,7 +81,7 @@
         </div>
     </div>
     <div class="page-5">
-        <div class="container mt-5 mb-5">
+        <div class="container mt-5 mb-5" data-aos="fade">
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <h2>Experience</h2>
@@ -129,12 +131,12 @@
         </div>
     </div>
     <div class="page page-6" id="page-6">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <h2>CERTIFICATE</h2>
         </div>
     </div>
     <div class="page-7">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <div class="flex-row-item">
                 <h3>MATLAB ON RAMP</h3>
                 <h4>MathWorks - Jan 2022</h4>
@@ -145,7 +147,9 @@
             <div class="flex-row-item">
                 <h3>Image Processing with MATLAB</h3>
                 <h4>MathWorks - Jan 2023</h4>
-                <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=fad533e5-02cc-40a6-a489-b3a9a84aa4ed&">Certificate Credentials</a>
+                <a
+                    href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=fad533e5-02cc-40a6-a489-b3a9a84aa4ed&">Certificate
+                    Credentials</a>
             </div>
             <div class="flex-row-item">
                 <h3>Deep Learning with MATLAB</h3>
@@ -175,7 +179,7 @@
         </div>
     </div>
     <div class="page page-8" id="page-8">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <h2>PROJECT</h2>
         </div>
     </div>
@@ -270,13 +274,13 @@
 
     </div>
     <div class="page page-10">
-        <div class="container">
+        <div class="container" data-aos="fade">
             <h2>ACTIVITY</h2>
         </div>
     </div>
     <div class="page-11">
         <div class="site">
-            <div class="container">
+            <div class="container" data-aos="fade">
                 <div class="img" id="img1"></div>
                 <div class="text-container">
                     <span></span>
@@ -292,7 +296,7 @@
 
         </div>
         <div class="site">
-            <div class="container">
+            <div class="container" data-aos="fade">
                 <div class="text-container">
                     <span></span>
                     <h1>Welcome Freshy & ICT x DST Sairahus 2022</h1>
@@ -307,7 +311,7 @@
 
         </div>
         <div class="site">
-            <div class="container">
+            <div class="container" data-aos="fade">
                 <div class="img" id="img3"></div>
                 <div class="text-container">
                     <span></span>
@@ -322,7 +326,7 @@
 
         </div>
         <div class="site">
-            <div class="container">
+            <div class="container" data-aos="fade">
                 <div class="text-container">
                     <span></span>
                     <h1>The Best Cats Of Thailand by WCF</h1>
@@ -334,34 +338,33 @@
             </div>
         </div>
     </div>
-    <div class="page page-12" id="page-12">
-        
+    <div class="page page-12" id="page-12" data-aos="fade">
+
+        <div>
+            <h2>CONNECT WITH ME</h2>
+        </div>
+        <div>
+            <h3>Siranut Akarawuthi</h3>
+            <h4>Siranut.poko@hotmail.com</h4>
+            <h4>+66 85 525 9987</h4>
+            <h4>www.pkbsa.com</h4>
+            <h4 id="resume">Find my resume <a href="#">here</a></h4>
+        </div>
+        <div>
+            <h4>CONNECT WITH ME</h4>
             <div>
-                <h2>CONNECT WITH ME</h2>
+                <a href="https://www.instagram.com/pkbs.a/" class="fa fa-instagram"></a>
+                <a href="https://www.linkedin.com/in/siranut-akarawuthi-8baa301b4/" class="fa fa-linkedin"></a>
+                <a href="https://www.facebook.com/siranut.akarawuthi/" class="fa fa-facebook"></a>
             </div>
-            <div>
-                <h3>Siranut Akarawuthi</h3>
-                <h4>Siranut.poko@hotmail.com</h4>
-                <h4>+66 85 525 9987</h4>
-                <h4>www.pkbsa.com</h4>
-                <h4 id="resume">Find my resume <a href="#">here</a></h4>
-            </div>
-            <div>
-                <h4>CONNECT WITH ME</h4>
-                <div>
-                    <a href="https://www.instagram.com/pkbs.a/" class="fa fa-instagram"></a>
-                    <a href="https://www.linkedin.com/in/siranut-akarawuthi-8baa301b4/" class="fa fa-linkedin"></a>
-                    <a href="https://www.facebook.com/siranut.akarawuthi/" class="fa fa-facebook"></a>
-                </div>
-            </div>
-        
+        </div>
+
     </div>
+
+    <script src="./styles/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-        const toggleButton = document.getElementsByClassName("toggle-button")[0]
-        const navbarLinks = document.getElementsByClassName("navbar-links")[0]
-        toggleButton.addEventListener('click', () => {
-            navbarLinks.classList.toggle('active')
-        })
+        AOS.init();
     </script>
 </body>
 
