added area of expertise

--- a/index.html
+++ b/index.html
@@ -99,6 +99,28 @@
       </div>
     </div>
   </div>
+
+  <div class="page-skills">
+    <div class="container">
+      <div class="row mt-5 mb-5 p-5">
+
+        <div class="col-sm-12 col-md-12 col-lg-5 ">
+          <h3 class="mb-4">Areas of Expertise</h3>
+          <p class="mb-4">Browse through the skills and talents I've acquired over the years. From coding and design to
+            problem-solving and teamwork, these abilities help me excel in various aspects of life and work."</p>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-7">
+          <script src="//cdn.amcharts.com/lib/4/core.js"></script>
+          <script src="//cdn.amcharts.com/lib/4/charts.js"></script>
+          <script src="//cdn.amcharts.com/lib/4/plugins/wordCloud.js"></script>
+          <script src="//cdn.amcharts.com/lib/4/themes/animated.js"></script>
+          <div id="chartdiv"></div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
   <div class="page-4" id="page-4">
     <div class="container" data-aos="fade">
       <h3 class="mb-4">Project</h3>
@@ -232,8 +254,7 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6 col-lg-3">
-          <a
-            href="http://superhero.pkbsa.com/">
+          <a href="http://superhero.pkbsa.com/">
             <div class="box" id="comic">
               <div class="box-content">
                 <h5>Comic Character</h5>
