--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <button class="mt-3 button_slide slide_right" onClick="document.getElementById('page-6').scrollIntoView();">
         Introduction
       </button>
+      <p class="mt-3 updated">Latest Updated : 8 Nov 2023</p>
     </div>
   </div>
 
