added tech stack

--- a/index.html
+++ b/index.html
@@ -116,8 +116,120 @@
           <script src="//cdn.amcharts.com/lib/4/plugins/wordCloud.js"></script>
           <script src="//cdn.amcharts.com/lib/4/themes/animated.js"></script>
           <div id="chartdiv"></div>
-
         </div>
+        <table class="table mt-5">
+          <tr class="d-flex flex-wrap">
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/C_Programming_Language.svg" class="img-fluid" alt="C" />
+              </a>
+              <br>C&nbsp;
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" class="img-fluid" alt="Python" />
+              </a>
+              <br>Python
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://www.vectorlogo.zone/logos/java/java-icon.svg" class="img-fluid" alt="Java" />
+              </a>
+              <br>Java
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://go.dev/blog/go-brand/Go-Logo/SVG/Go-Logo_Aqua.svg" class="img-fluid" alt="Golang" />
+              </a>
+              <br>Go
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Dart-logo-icon.svg" class="img-fluid" alt="Dart" />
+              </a>
+              <br>Dart
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg" class="img-fluid" alt="JavaScript" />
+              </a>
+              <br>JavaScript
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" class="img-fluid" alt="Nodejs" />
+              </a>
+              <br>Node.js
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" class="img-fluid" alt="React" />
+              </a>
+              <br>React
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Bootstrap_logo.svg" class="img-fluid" alt="Bootstrap" />
+              </a>
+              <br>Bootstrap
+            </td>
+            <td class="tech">
+              <a href="program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Sass_Logo_Color.svg" class="img-fluid" alt="Sass" />
+              </a>
+              <br>Sass
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://www.svgrepo.com/show/349342/docker.svg" class="img-fluid" alt="Docker" />
+              </a>
+              <br>Docker
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://raw.githubusercontent.com/PowerShell/PowerShell/master/assets/ps_black_128.svg" class="img-fluid" alt="Powershell" />
+              </a>
+              <br>Powershell
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://www.svgrepo.com/show/303251/mysql-logo.svg" class="img-fluid" alt="MySQL" />
+              </a>
+              <br>MySQL
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://cdn.icon-icons.com/icons2/2415/PNG/512/mongodb_original_wordmark_logo_icon_146425.png" class="img-fluid" alt="MongoDB" />
+              </a>
+              <br>MongoDB
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" class="img-fluid" alt="Matlab" />
+              </a>
+              <br>Matlab
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://www.vectorlogo.zone/logos/arduino/arduino-ar21.svg" class="img-fluid" alt="Arduino" />
+              </a>
+              <br>Arduino
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/P5js_Logo.svg" class="img-fluid" alt="p5js" />
+              </a>
+              <br>p5js
+            </td>
+            <td class="tech">
+              <a href="#program">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" class="img-fluid" alt="AWS" />
+              </a>
+              <br>AWS
+            </td>
+            <!-- Add more columns as needed -->
+          </tr>
+        </table>
 
       </div>
     </div>
